# ocr_document_mvp

./: .gitignore  README.md  pyproject.toml
ocr_document/: batch.py  cli.py  exporter.py  ocr.py
tests/: test_batch.py  test_cli.py  test_exporter.py  test_ocr.py
