[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-document-mvp"
version = "0.1.0"
description = "OCR Document MVP for extracting text from image files."
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
dependencies = [
    "pillow>=10.0",
    "pytesseract>=0.3.10"
]

[tool.setuptools.packages.find]
include = ["ocr_document*"]
exclude = ["data*", "outputs*", "tests*"]

[project.scripts]
ocr-doc = "ocr_document.cli:main"
